admin ui enhanced.